[package]
name = "egui_winit_ash_vk_mem"
version = "0.1.0"
authors = ["Orito Itsuki <orito.itsuki@gmail.com>"]
description = "This is the egui integration crate for winit, ash and vk_mem."
edition = "2018"
homepage = "https://docs.rs/egui_winit_ash_vk_mem"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/egui_winit_ash_vk_mem"
readme = "README.md"
repository = "https://github.com/MatchaChoco010/egui_winit_ash_vk_mem"
categories = ["gui", "game-development"]
keywords = ["gui", "winit", "ash", "vulkan", "vk_mem"]
include = [
  "src/*.rs",
  "src/shaders/spv/*.spv",
  "Cargo.toml",
]

[dependencies]
ash = "0.31.0"
bytemuck = "1.5.0"
clipboard = "0.5.0"
egui = "0.9.0"
vk-mem = "0.2.2"
webbrowser = "0.5.5"
winit = "0.24.0"

[dev-dependencies]
anyhow = "1.0.38"
ash-window = "0.5.0"
crevice = "0.5.0"
memoffset = "0.6.1"
mint = "0.5.6"
tobj = "2.0.3"

[dev-dependencies.cgmath]
version = "0.18.0"
features = ["mint"]
